public/stylesheets/style.css
body {
  width: 100vw;
  margin: 0;
  font: 14px "Montserrat", Helvetica, Arial, sans-serif;
  background-color: #f0f2f5;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

* {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
}

a {
  color: #00B7FF;
}

/* FORMS */
.form-group {
  display: flex;
  gap: 10px;
}

#form-group--gender {
  margin-top: 10px;
  display: flex;
  flex-direction: column;
}

.form-group > input {
  flex-grow: 1;
}

input {
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 5px;
  margin-top: 10px;
  padding: 15px;
}

::placeholder {
  color: #999;
  /* Firefox */
}

:-ms-input-placeholder {
  /* Internet Explorer 10-11 */
  color: #999;
}

::-ms-input-placeholder {
  /* Microsoft Edge */
  color: #999;
}

.btn {
  border-radius: 5px;
  cursor: pointer;
}

.btn > a {
  text-decoration: none;
  color: #fff;
}

/* LANDING PAGE */
.landing-page {
  margin: 0 auto;
  display: flex;
  flex-grow: 1;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

/* LOGO */
.logo-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 50%;
}

@media only screen and (max-width: 700px) {
  .logo-container {
    display: none;
  }
}

h1.logo {
  color:#54359C;
  font-size: 4vw;
  font-weight: 900;
}

h2.logo-subtext {
  width: 85%;
  font-weight: 400;
}

/* LOGIN */
.login-container {
  width: 396px;
  background-color: #fff;
  box-shadow: 0 2px 4px rgb(0 0 0 / 10%),
    0 8px 16px rgb(0 0 0 / 10%);
  border: 1px solid #ddd;
  border-radius: 10px;
  text-align: center;
  padding: 10px 0;
}

.login-input, .btn {
  width: 90%;
  font-size: 1rem;
}

.login-btn {
  background-color: #54359C;
  color: #fff;
}

.login-bottom {
  display: inline-block;
  margin: 20px 0;
}

.login-bottom > * {
  width: 100%;
}

.login-divider {
  width: 90%;
  border-bottom: 1px solid #dadde1;
  margin: 0 auto;
}

.login_new-account {
  display: flex;
  justify-content: center;
}

.login_new-account-btn {
  font-size: 1rem;
  padding: 10px;
  margin: 20px 0 10px 0;
  min-width: 150px;
  width: 50%;
  background-color:#00B7FF;
}

/* CREATE ACCOUNT */
.create-account {
  display: flex;
  flex-direction: column;
}

/* CONTENT */
.content {
  display: flex;
  flex-direction: column;
  padding: 50px;
  margin: 0 auto;
    /* display: flex; */
    /* flex-direction: row; */
    justify-content: center;
}

/* GREETING */
/* .greeting {
  display: block;
  margin: 10px;
} */

/* POST */
.post-container {
  align-self: center;
  width: 490px;
}

.post-input input {
  word-wrap: break-word;
  word-break: break-all;
}

.post-input:focus {
  height: 490px;
  transition: height 5s;
  background: linear-gradient(to bottom, #69e0cd, #5e0eab);
  background: linear-gradient(to bottom, #a790c1, #c9e6b9);
  background: linear-gradient(to bottom, #d76214, #660bec);
  background: linear-gradient(to bottom, #2ca4c7, #dbded1);
  background: linear-gradient(to bottom, #f16328, #920b5b);
  background: linear-gradient(to bottom, #a46d5b, #f36670);
  background: linear-gradient(to bottom, #ed0025, #70daca);
  background: linear-gradient(to bottom, #85cdde, #51f95e);
  color: white;
  font-size: xx-large;
  text-align: center; 
  outline: none;
  border: none;
}

/* .post-input:focus::placeholder {
  color: transparent;
} */

.post-content {
  display: flex;
  justify-content: center;
  align-content: center;
  height: 340px;
  width: 340px;
  background: linear-gradient(to bottom, #69e0cd, #5e0eab);
  background: linear-gradient(to bottom, #a790c1, #c9e6b9);
  background: linear-gradient(to bottom, #d76214, #660bec);
  background: linear-gradient(to bottom, #2ca4c7, #dbded1);
  background: linear-gradient(to bottom, #f16328, #920b5b);
  background: linear-gradient(to bottom, #a46d5b, #f36670);
  background: linear-gradient(to bottom, #ed0025, #70daca);
  background: linear-gradient(to bottom, #85cdde, #51f95e);
  color: white;
  font-size: xx-large;
  text-align: center;
  outline: none;
  border: none;
}

.post-message {
  flex: 1;
  align-self: center;
}

.posts-container {
  margin-top: 20px;
  display: grid;
  grid-template-columns: 340px 340px 340px;
  column-gap: 20px;
  grid-template-rows: auto;
}

.post-details > p {
  margin-block-start: 0.75em;
  margin-block-end: 0.75em;
}

/* APP BAR */
.app-bar {
  position: sticky;
  top: 0;
  display: flex;
  align-items: center;
  height: 56px;
  background-color: white;
  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
  padding-right: 16px;
  padding-left: 16px;
}

.app-bar--center {
  flex-grow: 1;
}

.controls {
  display: flex;
  gap: 8px;
}

.control-item {
  border-radius: 100%;
  width: 40px;
  height: 40px;
  background-color: #e4e6eb;
}

.logo-icon {
  border-radius: 100%;
  width: 40px;
  height: 40px;
  background-color: #e4e6eb;
}

.profile {
  display: flex;
  align-items: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
}

.profile > span {
  flex: 1;
  justify-self: center;
  font-size: 1.25em;
}

.user-menu {
  width: 400px;
  /* height: 112px; */
  position: fixed;
  top: 56px;
  right: 16px;
  display: block;
  background-color: #fff;
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  margin-bottom: -168px;
  /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); */
}

.user-menu > ul {
  padding: 0;
  margin: 0;
}

.user-menu li a {
  text-decoration: none;
  color: #000;
  font-weight: 500;
  margin: 0px;
  display: block;
  width: 100%;
  height: 100%;
  padding: 1.5em;
}

.user-menu > ul > li {
  list-style: none;
}

.user-menu > ul > li:hover {
  background-color: rgba(0, 0, 0, 0.025);
}

.hidden {
  display: none;
}

